--- a/avaliacoes/atividade4/styles.css
+++ b/avaliacoes/atividade4/styles.css
@@ -1,11 +1,11 @@
 html, body {
-  background-color: green;
+  background-color: rgb(245, 250, 245);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   fonte-size: 20px;
 } 
 
 h1 {
-color:aqua;
+color:rgb(4, 5, 73);
 background-color: rgb(176, 226, 176);
 
 }
